[package]
name = "caspie-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.128"
serde_json = "1"
teloxide = { version = "0.5.1", features = ["full"] }
tokio = { version = "1.3", features = ["full"] }
tokio-stream = "0.1.7"
